save upload, working on minor form

--- a/createaccount/corporate.html
+++ b/createaccount/corporate.html
@@ -20,14 +20,302 @@
       <img class="mainlogo" src="../images/logo.png" alt="" />
       <h1>create a Corporate account</h1>
     </header>
+
     <div class="container form-wrapper">
-      <form class="create-info-wrapper">
+      <form id="corporate-account" class="create-info-wrapper">
         <div class="step step-1 active">
+          <div class="account-toprow form-group mb-4">
+            <div class="row">
+              <div class="col-lg-6">
+                <input
+                  type="email"
+                  placeholder="enter email"
+                  class="form-control"
+                  name="val-email"
+                  id="val-email"
+                />
+              </div>
+              <div class="col-lg-6">
+                <input
+                  class="form-control"
+                  type="password"
+                  name="val-password"
+                  id="val-password"
+                />
+              </div>
+              <button class="btn val-btn col-lg-4">Validate</button>
+            </div>
+          </div>
+
+          <div class="page page1">
+            <div class="field-wrapper row row-1">
+              <!-- this is used to help with the placement of fields -->
+              <div class="form-group col-lg-6">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="compname"
+                  name="companyName"
+                  placeholder="full company name"
+                />
+              </div>
+              <div class="form-group col-lg-6">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="companyAddress"
+                  name="company address"
+                  placeholder="company address"
+                />
+              </div>
+            </div>
+            <!-- row 1 end -->
+            <div class="field-wrapper row row-2">
+              <!-- this is used to help with the placement of fields -->
+              <div class="form-group col-lg-6 mt-4">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="postaladdress"
+                  name="postalAddress"
+                  placeholder="postal address"
+                />
+              </div>
+
+              <div class="form-group col-lg-3 mt-4">
+                <input
+                  type="number"
+                  class="form-control"
+                  id="rcNumber"
+                  name="rcNumber"
+                  placeholder="RC number"
+                />
+              </div>
+
+              <div class="form-group col-lg-3">
+                <label for="date of incorporation" class="form-label"
+                  >date of incorporation</label
+                >
+                <input
+                  id="DateOfIncorporation"
+                  class="form-control"
+                  type="date"
+                />
+              </div>
+            </div>
+            <!-- row-2 end -->
+
+            <div class="field-wrapper row row-3">
+              <div class="from-group col-lg-6">
+                <input
+                  id="natureOfBusiness"
+                  name="natureOfBusiness"
+                  class="form-control"
+                  type="text "
+                  placeholder="nature of business"
+                />
+              </div>
+
+              <div class="form-group col-lg-6">
+                <input
+                  type="number"
+                  id="taxNumber"
+                  class="form-control"
+                  name="taxNumber"
+                  placeholder="Tax Number"
+                />
+              </div>
+            </div>
+            <!-- row-3 end  -->
+
+            <div class="field-wrapper row row-4">
+              <!-- this is used to help with the placement of fields -->
+              <div class="form-group col-lg-6">
+                <input
+                  type="number"
+                  id="assertSize"
+                  class="form-control"
+                  name="assertSize"
+                  placeholder="Total assert size"
+                />
+              </div>
+              <div class="col-lg-6"></div>
+            </div>
+            <!-- row-4 end -->
+
+            <div class="field-wrapper row row-5">
+              <!-- this is used to help with the placement of fields -->
+              <div class="form-group col-lg-6">
+                <input
+                  type="text"
+                  id="sorceOfInvestment"
+                  class="form-control"
+                  name="sourceOfInvestment"
+                  placeholder="Source Of Investment"
+                />
+              </div>
+              <div class="form-group col-lg-6">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="website"
+                  name="website"
+                  placeholder="website address"
+                />
+              </div>
+            </div>
+            <!-- row-5 end -->
+
+            <div class="field-wrapper row row-6">
+              <!-- this is used to help with the placement of fields -->
+              <div class="col-lg-12">
+                <input
+                  id="regOfficeAddress"
+                  name=""
+                  class="form-control"
+                  type="text"
+                  placeholder="Registered Office Address (if different from above)
+                  "
+                />
+              </div>
+            </div>
+            <!-- row-6 end -->
+          </div>
           <!-- below div ends step-1 -->
           <div class="row mulstep-btn-cont">
-            <!-- <div class="btn btn-left btn-prev">Previous</div> -->
-            <div class="btn btn-danger btn-right btn-submit">Submit</div>
+            <div class="btn btn-danger btn-right btn-next">Next</div>
           </div>
+        </div>
+
+        <!-- step 2 -->
+        <div class="step step-2">
+          <h3>
+            BANK ACCOUNT DETAILS (Your Bank Account Name Details should
+            correspond with CSCS Account Name)
+          </h3>
+          <div class="field-wrapper row row-7">
+            <div class="from-group col-lg-6">
+              <input
+                id="bankName"
+                name="bankName"
+                class="form-control"
+                type="text "
+                placeholder="Bank Name"
+              />
+            </div>
+
+            <div class="form-group col-lg-6">
+              <input
+                type="text"
+                id="bankBranch"
+                class="form-control"
+                name="bankBranch"
+                placeholder="Branch"
+              />
+            </div>
+          </div>
+          <!-- row-7 end -->
+          <div class="field-wrapper row row-8">
+            <div class="from-group col-lg-6">
+              <input
+                id="accountName"
+                name="accountName"
+                class="form-control"
+                type="text "
+                placeholder="Account name"
+              />
+            </div>
+
+            <div class="form-group col-lg-6">
+              <input
+                type="number"
+                id="accountNumber"
+                class="form-control"
+                name="bankBranch"
+                placeholder="Account Number"
+              />
+            </div>
+          </div>
+          <!-- row-8 end -->
+          <div class="field-wrapper row row-9">
+            <div class="from-group col-lg-6">
+              <label for="date of opening account" class="form-label"
+                >Date of Opening Bank Account</label
+              >
+              <input
+                id="dateOfAccountCreation"
+                class="form-control"
+                type="date"
+                name="dateOfAccountOpening"
+                placeholder="Date of Opening Bank Account"
+              />
+            </div>
+
+            <div class="form-group col-lg-6 mt-4">
+              <input
+                type="number"
+                id="bvn"
+                name="bvn"
+                class="form-control"
+                placeholder="bvn"
+              />
+            </div>
+          </div>
+          <!-- row-9 end -->
+
+          <!-- below button container  -->
+          <div class="row mulstep-btn-cont">
+            <div class="btn btn-left btn-prev mx-3">Previous</div>
+            <div class="btn btn-danger btn-right btn-next">Next</div>
+          </div>
+          <!-- below div ends step-2 -->
+        </div>
+        <div class="step step-3">
+          <h3>Principal Contact Person</h3>
+          <div class="field-wrapper row row-10">
+            <!-- this is used to help with the placement of fields -->
+            <div class="col-lg-12">
+              <input
+                id="contactPersonName"
+                name="contactPersonName"
+                class="form-control"
+                type="text"
+                placeholder="Name
+                "
+              />
+            </div>
+          </div>
+          <!-- row-10 end -->
+          <div class="field-wrapper row row-11">
+            <div class="from-group col-lg-6">
+              <input
+                id="contactPersonTel"
+                name="contactPersonTel"
+                class="form-control"
+                type="tel "
+                placeholder="telephone number"
+              />
+            </div>
+
+            <div class="form-group col-lg-6">
+              <input
+                type="email"
+                id="contactPersonEmail"
+                name="contactPersonEmail"
+                class="form-control"
+                name="contact email"
+                placeholder="email"
+              />
+            </div>
+          </div>
+          <!-- row-11 end -->
+
+          <!-- below button container  -->
+          <div class="row mulstep-btn-cont">
+            <div class="btn btn-left btn-prev mx-3">Previous</div>
+            <div id="submit-btn" class="btn btn-primary btn-right">submit</div>
+          </div>
+          <!-- below div ends step-3 -->
         </div>
       </form>
     </div>
@@ -38,5 +326,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./account.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
