--- a/createaccount/personal.html
+++ b/createaccount/personal.html
@@ -62,8 +62,8 @@
                 <input
                   type="text"
                   class="form-control"
-                  id="surname"
-                  name="surname"
+                  id="first-name"
+                  name="firstName"
                   placeholder="first name"
                 />
               </div>
@@ -97,7 +97,7 @@
                 <label for="date of birth" class="form-label"
                   >date of birth</label
                 >
-                <input id="Date" class="form-control" type="date" />
+                <input id="dob" name="dob" class="form-control" type="date" />
               </div>
             </div>
             <!-- row-2 end -->
@@ -168,11 +168,12 @@
                 <select
                   class="form-control"
                   id="nationality"
+                  name="nationality"
                   aria-label="Default select nationality"
                 >
                   <option selected>nationality</option>
-                  <option value="mr">nigeria</option>
-                  <option value="mrs">ghana</option>
+                  <option value="Nigeria">nigeria</option>
+                  <option value="Ghana">ghana</option>
                 </select>
               </div>
               <div class="col-lg-6"></div>
@@ -185,11 +186,12 @@
                 <select
                   class="form-control"
                   id="id-type"
+                  name="idType"
                   aria-label="Default select id type"
                 >
                   <option selected>id type</option>
-                  <option value="mr">drivers lincence</option>
-                  <option value="mrs">voter card</option>
+                  <option value="drivers">drivers lincence</option>
+                  <option value="voter">voter card</option>
                 </select>
               </div>
               <div class="form-group col-lg-6">
@@ -197,7 +199,7 @@
                   type="text"
                   class="form-control"
                   id="id-number"
-                  name="localgovernment"
+                  name="idNumber"
                   placeholder="id number"
                 />
               </div>
@@ -211,13 +213,23 @@
                 <label for="exampleInputPassword1" class="form-label"
                   >issue date</label
                 >
-                <input id="id-Date" class="form-control" type="date" />
+                <input
+                  id="id-Date"
+                  name="idIssueDate"
+                  class="form-control"
+                  type="date"
+                />
               </div>
               <div class="col-lg-3 form-group">
                 <label for="exampleInputPassword1" class="form-label"
                   >expirey date</label
                 >
-                <input id="id-expiry" class="form-control" type="date" />
+                <input
+                  id="id-expiry"
+                  name="idExpireyDate"
+                  class="form-control"
+                  type="date"
+                />
               </div>
               <div class="col-lg-6"></div>
             </div>
@@ -228,6 +240,7 @@
               <div class="col-lg-12">
                 <input
                   id="R-address"
+                  name="residentialAddress"
                   class="form-control"
                   type="text"
                   placeholder="residential address"
@@ -242,13 +255,15 @@
                 <input
                   id="phone-number"
                   class="form-control"
+                  name="phoneNumber"
                   type="tel"
                   placeholder="phone number"
                 />
               </div>
               <div class="form-group col-lg-6">
                 <input
-                  id="address"
+                  id="businessNumber"
+                  name="businessNumber"
                   class="form-control"
                   type="tel"
                   placeholder="business number"
@@ -263,6 +278,7 @@
                 <select
                   class="form-control"
                   id="occupation"
+                  name="occupation"
                   aria-label="Default select occupation"
                 >
                   <option selected>occupation</option>
@@ -280,6 +296,7 @@
               <div class="form-group col-lg-6">
                 <input
                   id="mmn"
+                  name="motherMaidianName"
                   class="form-control"
                   type="text"
                   placeholder="Mothers maidian name"
@@ -288,6 +305,7 @@
               <div class="form-group col-lg-6">
                 <input
                   id="nok"
+                  name="nextOfKin"
                   class="form-control"
                   type="text"
                   placeholder="Next of kin"
@@ -302,6 +320,7 @@
                 <input
                   id="purpose"
                   class="form-control"
+                  name="accountOpeningPurpose"
                   type="text"
                   placeholder="Purpose for opening account"
                 />
@@ -314,6 +333,7 @@
               <div class="form-group col-lg-6">
                 <input
                   id="soi"
+                  name="sourceOfIncome"
                   class="form-control"
                   type="text"
                   placeholder="Source of income"
@@ -322,8 +342,9 @@
               <div class="form-group col-lg-6">
                 <input
                   id="investment-amount"
+                  name="initialInvestmentAmount"
                   class="form-control"
-                  type="text"
+                  type="number"
                   placeholder="initial investment amount"
                 />
               </div>
@@ -336,6 +357,7 @@
                   class="form-control"
                   id="bankname"
                   aria-label="Default select occupation"
+                  name="bankName"
                 >
                   <option selected>select bank</option>
                   <option value="gtb">GT bank</option>
@@ -351,8 +373,9 @@
               <!-- this is used to help with the placement of fields -->
               <div class="form-group col-lg-6">
                 <input
-                  id="soi"
+                  id="branch-location"
                   class="form-control"
+                  name="branchLocation"
                   type="text"
                   placeholder="Branch location"
                 />
@@ -366,6 +389,7 @@
               <div class="form-group col-lg-6">
                 <input
                   id="account-name"
+                  name="accountName"
                   class="form-control"
                   type="text"
                   placeholder="account name"
@@ -374,8 +398,9 @@
               <div class="form-group col-lg-6">
                 <input
                   id="account-number"
+                  name="accountNumber"
                   class="form-control"
-                  type="text"
+                  type="number"
                   placeholder="account number"
                 />
               </div>
@@ -387,6 +412,7 @@
               <div class="form-group col-lg-6">
                 <input
                   id="opening-date"
+                  name="accountOpeningDate"
                   class="form-control"
                   type="text"
                   placeholder="opening date"
@@ -395,6 +421,7 @@
               <div class="form-group col-lg-6">
                 <input
                   id="bvn"
+                  name="bvn"
                   class="form-control"
                   type="text"
                   placeholder="bvn"
@@ -417,8 +444,8 @@
             <div class="row mulstep-btn-cont">
               <div class="btn btn-left btn-prev">Previous</div>
               <div
-                class="btn btn-danger btn-right btn-submit"
-                id="submit-personal"
+                class="btn btn-danger btn-right btn-submit sub-btn"
+                id="submit-btn"
               >
                 Submit
               </div>
